<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teachinmap_rviz_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="guanqi.chen@stihl.de">rdp</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>libqt5-widgets</depend>
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>stihl_nav_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <rviz plugin="plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
